code cleanup and minor fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,3 +39,11 @@ body {
   font-size: 0.9rem;
   vertical-align: middle;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
